k8s/mern-config-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: config-server
spec:
  ports:
  - port: 8080
    targetPort: 8888
  selector:
    app: config-server

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  labels:
    app: config-server
spec:
  selector:
    matchLabels:
      app: config-server
  replicas: 1
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: jakelemar98/config-server:$COMMIT_SHA1
          ports:
          - containerPort: 8888
