k8s/mern-deployment-back.yml
apiVersion: v1
kind: Service
metadata:
  name: mern-app-back
spec:
  ports:
  - port: 8080
    targetPort: 5000
  selector:
    app: mern-app-back

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-app-back
  labels:
    app: mern-app-back
spec:
  selector:
    matchLabels:
      app: mern-app-back
  replicas: 1
  template:
    metadata:
      labels:
        app: mern-app-back
    spec:
      containers:
        - name: mern-app-back
          image: jakelemar98/mern-app-backend:$COMMIT_SHA1
          ports:
          - containerPort: 5000
