k8s/mern-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: mern-app
spec:
  ports:
  - port: 8080
    targetPort: 3000
  selector:
    app: mern-app

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-app
  labels:
    app: mern-app
spec:
  selector:
    matchLabels:
      app: mern-app
  replicas: 1
  template:
    metadata:
      labels:
        app: mern-app
    spec:
      containers:
        - name: mern-app
          image: jakelemar98/mern-app:$COMMIT_SHA1
          ports:
          - containerPort: 3000
