k8s/mern-service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-mern-app
spec:
  selector:
    app: k8s-mern-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 9376
