k8s/mern-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mern-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - app.jalema01-mern-app.com
    - backend.jalema01-mern-app.com
    secretName: letsencrypt-prod
  rules:
  - host: app.jalema01-mern-app.com
    http:
      paths:
      - backend:
          serviceName: mern-app
          servicePort: 8080
  - host: backend.jalema01-mern-app.com
    http:
      paths:
      - backend:
          serviceName: mern-app-back
          servicePort: 8080
